Make sure sample config isn't omitted from 'make dist'

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ AUTOMAKE_OPTIONS = foreign dist-bzip2
 
 SUBDIRS = src
 
-EXTRA_DIST = README
+EXTRA_DIST = README xmms2hotkey.conf.sample
 
 # Location of boost.m4
 ACLOCAL_AMFLAGS = -I m4
