--- a/configure.ac
+++ b/configure.ac
@@ -38,9 +38,10 @@ else
 	])
 fi
 
-BOOST_REQUIRE([1.42])
-BOOST_PROGRAM_OPTIONS
-BOOST_THREADS
+AX_BOOST_BASE([1.42], [], [AC_MSG_ERROR([Could not find Boost])])
+AX_BOOST_SYSTEM
+AX_BOOST_PROGRAM_OPTIONS
+AX_BOOST_THREAD
 
 PKG_CHECK_MODULES([xmms2client], [xmms2-client-cpp >= 0.6])
 
