--- a/configure.ac
+++ b/configure.ac
@@ -38,7 +38,7 @@ else
 	])
 fi
 
-AX_BOOST_BASE([1.42], [], [AC_MSG_ERROR([Could not find Boost])])
+AX_BOOST_BASE([1.42], [], AC_MSG_ERROR([Could not find Boost]))
 AX_BOOST_SYSTEM
 AX_BOOST_PROGRAM_OPTIONS
 AX_BOOST_THREAD
